package.json changed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/app.jsx"></script>
+    <div id="root">
+      <script type="javascript" src="/src/App.jsx"></script>
+    </div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
